libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__invalid-quoted-name.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: invalid quoted name "with space": only letters, digits, '_', '-' and '.' are allowed at 1:10
	  1 | variable "with space": string {}
	    |          ^
	- parse error: missing required 'version' directive
