libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__metadata-duplicate.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: top-level 'metadata' block already declared at 3:1
	  3 | metadata { b = 2 }
	    | ^
