libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__missing-version.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: missing required 'version' directive
