libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__multiline-version.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: multi-line strings are not allowed in this position at 1:9
	  1 | version """
	    |         ^
	- parse error: missing required 'version' directive
