libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-condition-two-keys.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: condition object must have exactly one of 'and', 'or', or 'not' at 1:33
	  1 | resource r: aws/x { condition = { and = [variables.x], or = [variables.y] }
	    |                                 ^
	- parse error: missing required 'version' directive
